Made the information part of the page

--- a/index.html
+++ b/index.html
@@ -26,11 +26,39 @@
                 <li>header link two</li>
                 <li>header link three</li>
             </ul>
-            <div class="box">
+            <div class="main-box">
                 this is a placeholder for an image
             </div>
         </div>
     </div>
     
+    <div class="info">
+        <div class="upper-part">
+            <div class="info-title">Some random information</div>
+        </div>
+        <div class="boxes">
+            <div class="container">
+                <div class="box"></div>
+                <div class="box-text">this is some subtext under an illustration image</div>
+            </div>
+            <div class="container">
+                <div class="box"></div>
+                <div class="box-text">this is some subtext under an illustration image</div>
+            </div>
+            <div class="container">
+                <div class="box"></div>
+                <div class="box-text">this is some subtext under an illustration image</div>
+            </div>
+            <div class="container">
+                <div class="box"></div>
+                <div class="box-text">this is some subtext under an illustration image</div>
+            </div>
+
+            <div class="box1"></div>
+        </div>
+    </div>
+
+   
+
 </body>
 </html>
