--- a/index.html
+++ b/index.html
@@ -66,7 +66,17 @@
             <div class="author-text">-Thor, God of Thunder</div>
         </div>
     </div>
-    
 
+    <div class="pop-up">
+        <div class="big-box">
+            <div class="text-part">
+                <div class="bold-text">Call to action! It's time!</div>
+                <div class="light-text">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="button-part">
+                <button class="second-button">Sign up</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
